# watchdog

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  index.html  package-lock.json  package.json
api/: ask.ts  classify.ts  extract-local.ts  extract.ts  transcribe.ts  verify.ts
model/: .gitignore  evaluate.py  export_onnx.py  generate_dataset.py  pyproject.toml  run.sh  train.py
public/: manifest.json  sw.js
src/: main.ts  style.css
src/lib/: parse.ts  pipeline.ts  prompts.ts  sound.ts  types.ts
tests/: api.test.ts  eval.mjs  qa.mjs  unit.test.ts
tests/transcripts/: 01_ai_safety_dinner.json  02_science_brunch.json  03_tech_startup_debate.json  04_geopolitics_bar.json  05_health_fitness_myths.json  06_mixed_rapid_fire.json
watchdog-app/: DESIGN_BRIEF.md  package-lock.json  package.json
watchdog-app/api/: extract.ts
watchdog-app/public/: manifest.json
watchdog-app/src/lib/: mockData.ts  prompts.ts  types.ts
